cambios que agregamos por primera vez

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     <p> 
-        hola estudiantes este es mi sitio web sigueme en OF XD
-        
+        hola amigos!, voy a hacer un video      
     </p>
 </body>
 </html>
